[gd_scene load_steps=38 format=3 uid="uid://dispcdksyboha"]

[ext_resource type="Script" path="res://scripts/attacker.gd" id="1_5n3m0"]
[ext_resource type="Texture2D" uid="uid://dsvog4sdetuq3" path="res://textures/Engine.png" id="2_i4ypy"]
[ext_resource type="Texture2D" uid="uid://ytd1a3nmvxao" path="res://textures/Main Ship - Base - Full health.png" id="3_bjjv0"]
[ext_resource type="Texture2D" uid="uid://dgr7b06nbc6cx" path="res://textures/Autocannon.png" id="4_46an0"]
[ext_resource type="Texture2D" uid="uid://b840hdwe2vju6" path="res://textures/Main Ship - Base - Slight damage.png" id="4_whcq6"]
[ext_resource type="Texture2D" uid="uid://b2chh23emhuwu" path="res://textures/Main Ship - Base - Damaged.png" id="5_x7vmg"]
[ext_resource type="Texture2D" uid="uid://cbk2t6xxntmk8" path="res://textures/Main Ship - Base - Very damaged.png" id="6_7dtbf"]
[ext_resource type="PackedScene" uid="uid://5po700lnixfo" path="res://entities/shield.tscn" id="8_fbkni"]
[ext_resource type="Texture2D" uid="uid://cq2kg4c74i5n0" path="res://textures/06.png" id="9_hxwoy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_08lvl"]
radius = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_v753h"]
atlas = ExtResource("2_i4ypy")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ewvd"]
atlas = ExtResource("2_i4ypy")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojktl"]
atlas = ExtResource("2_i4ypy")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_urbgy"]
atlas = ExtResource("2_i4ypy")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dihjy"]
atlas = ExtResource("2_i4ypy")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnp5j"]
atlas = ExtResource("2_i4ypy")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ewujq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v753h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ewvd")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojktl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urbgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dihjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnp5j")
}],
"loop": true,
"name": &"running",
"speed": 20.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_5y8tr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bjjv0")
}, {
"duration": 1.0,
"texture": ExtResource("4_whcq6")
}, {
"duration": 1.0,
"texture": ExtResource("5_x7vmg")
}, {
"duration": 1.0,
"texture": ExtResource("6_7dtbf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_yf0qs"]
atlas = ExtResource("4_46an0")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c17w"]
atlas = ExtResource("4_46an0")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kdk2"]
atlas = ExtResource("4_46an0")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s801g"]
atlas = ExtResource("4_46an0")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mlhj"]
atlas = ExtResource("4_46an0")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h4x8"]
atlas = ExtResource("4_46an0")
region = Rect2(0, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_6l2ix"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf0qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c17w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kdk2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s801g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mlhj")
}],
"loop": true,
"name": &"firing",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h4x8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lpjtw"]
atlas = ExtResource("9_hxwoy")
region = Rect2(192, 16, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sk1my"]
atlas = ExtResource("9_hxwoy")
region = Rect2(144, 16, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfw7g"]
atlas = ExtResource("9_hxwoy")
region = Rect2(96, 16, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3iyg"]
atlas = ExtResource("9_hxwoy")
region = Rect2(48, 16, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgd4b"]
atlas = ExtResource("9_hxwoy")
region = Rect2(0, 16, 48, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_sy7op"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpjtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sk1my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfw7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3iyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgd4b")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_blt74"]
atlas = ExtResource("9_hxwoy")
region = Rect2(192, 64, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwaht"]
atlas = ExtResource("9_hxwoy")
region = Rect2(144, 64, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jne6"]
atlas = ExtResource("9_hxwoy")
region = Rect2(96, 64, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g24jr"]
atlas = ExtResource("9_hxwoy")
region = Rect2(48, 64, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlyxm"]
atlas = ExtResource("9_hxwoy")
region = Rect2(0, 64, 48, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kdkj2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_blt74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwaht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jne6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g24jr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlyxm")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Attacker" type="CharacterBody2D"]
rotation = -1.5708
scale = Vector2(3, 3)
collision_layer = 4
platform_floor_layers = 4294901760
script = ExtResource("1_5n3m0")

[node name="HitBox" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_08lvl")

[node name="Blaster1" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-9, -8)

[node name="Blaster2" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(9, -8)

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.25
autostart = true

[node name="EngineAnimation" type="AnimatedSprite2D" parent="."]
z_index = 1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ewujq")
animation = &"running"

[node name="ShipSprite" type="AnimatedSprite2D" parent="."]
z_index = 2
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_5y8tr")

[node name="GunAnimation" type="AnimatedSprite2D" parent="."]
z_index = 3
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_6l2ix")
animation = &"firing"
autoplay = "firing"
frame = 1
frame_progress = 0.472109

[node name="Shield" parent="." instance=ExtResource("8_fbkni")]

[node name="ShieldHud" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(30, 0)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_sy7op")

[node name="HealthHud" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-30, 0)
rotation = -1.5708
scale = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_kdkj2")

[connection signal="timeout" from="AttackTimer" to="." method="shoot"]
